# qasic-engineering-as-code

./: .dockerignore  .env.example  .gitattributes  .gitignore  .review-prompt.txt  Dockerfile.api  Dockerfile.frontend  Dockerfile.jupyter  Dockerfile.worker  MANIFEST.in  Makefile  PROTOCOLS.md  QRNG.PY  README.md  cli.py  docker-compose.full.yml  docker-compose.yml  pyproject.toml  requirements-dashboard.txt  requirements-docker.txt  requirements-test.txt  requirements.txt  star_routing.json
.devcontainer/: devcontainer.json  docker-compose.dev.yml
.github/workflows/: hardware-ci.yml
ai-committee/: DIGITAL_TWIN_PLATFORM_SPEC.md  EXECUTION-SUMMARY.md  QUICK-REFERENCE.md  README.md  SESSION_STATUS_MARCH_9_2026.md  TAPEOUT_RECOMMENDATIONS.md  VS-CODE-INTEGRATION.md  orchestrator.py  requirements.txt
ai-committee/agents/: agent-specs.md
ai-committee/models/: model-configuration.md
app/: README.md  __init__.py  celery_app.py  main.py  requirements.txt  tasks.py
apps/: README.md  __init__.py
apps/bqtc/: .gitignore  INSTALL.md  README.md  README_BQTC.md  install  pipeline.py  requirements.txt  run_one_cycle.py
apps/qrnc/: .gitignore  README.md  __init__.py  commitment.py  exchange.py  token.py
asic/: __init__.py  circuit.py  executor.py  qasm_loader.py  topology_builder.py
config/: __init__.py  app_config.yaml  loader.py  logger.py  pipeline_config.yaml  storage_config.yaml  thermal_config.yaml
dashboard/: __init__.py  __main__.py  cli_dashboard.py
demos/: demo_algorithm_to_asic.py  demo_asic.py  demo_bb84.py  demo_bitflip_code.py  demo_commitment.py  demo_e91.py  demo_noise.py  demo_teleport.py  demo_thief.py
deploy/: README.md
digital-twin/: README.md  orchestrator.py  pyproject.toml  test_platform.py
digital-twin/cli/: __init__.py  main.py
digital-twin/engines/: __init__.py  drc.py  fea.py  gnn.py  meep.py  qubit.py  routing.py  thermal.py  topology.py  yield_mc.py
digital-twin/notebooks/: 01_design_overview.ipynb  __init__.py
digital-twin/schemas/: design_schema.py
digital-twin/utils/: __init__.py  common.py
docs/: APPLICATIONS.md  Automated_HEaC_Deep_Cryogenic_Quantum_ASICs.aux  Automated_HEaC_Deep_Cryogenic_Quantum_ASICs.tex  CALIBRATION_DIGITAL_TWIN.md  CHANNEL_NOISE.md  CV_QUANTUM_RADAR.md  Computational_Materials_Science_Cryogenic_Quantum_Metamaterials.aux  Computational_Materials_Science_Cryogenic_Quantum_Metamaterials.md  Engineering_as_Code_Distributed_Computational_Roadmap.out  Engineering_as_Code_Distributed_Computational_Roadmap.tex  Graph_Theoretic_Inverse_Design_GNN_Metasurfaces.tex  HEaC_opensource_Meep.md  NEXT_STEPS_ROADMAP.md  ORCHESTRATION.md  PULSE_CONTROL.md  QKD.md  README.md  ROADMAP_STATUS.md  THERMAL_AND_PARASITICS.md  TOPOLOGY_BUILDER.md  WHITEPAPER_Holographic_Metasurfaces_Quantum_SATCOM.aux  WHITEPAPER_Holographic_Metasurfaces_Quantum_SATCOM.md  WHITEPAPER_Holographic_Metasurfaces_Quantum_SATCOM.out  WHITEPAPER_Holographic_Metasurfaces_Quantum_SATCOM.tex  Whitepaper_Unified_Quantum_Metasurfaces_SATCOM.md  Whitepaper_Unified_Quantum_Metasurfaces_SATCOM.out  Whitepaper_Unified_Quantum_Metasurfaces_SATCOM.tex  architecture_overview.md  build_pdfs.ps1  quantum-terrestrial-backhaul.md  superscreen_integration.md
docs/app/: ALPHA_CUSTOMER.md  ALPHA_SCOPE.md  ARCHITECTURE_CONTROL_VS_DATA_PLANE.md  ARCHITECTURE_MODULARIZATION_PROPOSAL.md  CELERY_TROUBLESHOOTING.md  CODE_REVIEW_OPENQASM_ASIC.md  COMPUTE_COST_ASSESSMENT.md  DATA_AND_CONTROL_PLANE_QUANTUM_ASIC.md  DATA_PERSISTENCE.md  HEaC_opensource_Meep.md  INFRASTRUCTURE_FEATURES.md  NEXT_STEPS_ROADMAP.md  OPENQASM_TO_ASIC_PIPELINE.md  OPENQASM_TO_ASIC_WUI_WALKTHROUGH.md  PHASE1_REORGANIZATION_PROPOSAL.md  PIPELINE_METRICS.md  PROGRAM_ACTION_ITEMS.md  QISKIT_FUNCTIONS_IBM.md  QUANTUM_ASIC.md  README.md  ROADMAP_SCHEDULE.md  UNIFIED_UX.md  (+3 more)
engineering/: README.md  ci_gds_diff.py  fdtd_dataset.npz  forward_prediction_net.py  graph_from_geometry.py  meep_s_param_dataset.py  metasurface_inverse_gnn.py  metasurface_inverse_net.py  open_system_qutip.py  requirements-engineering.txt  routing_qubo_qaoa.py  routing_rl.py  run_pipeline.py  run_protocol_on_ibm.py  squid_spectrum_scqubits.py  superconducting_extraction.py  superscreen_demo.py  test_phases_heac.npy  thermal_stages.py  thermodynamic_validator.py  viz_routing_phase.py  viz_topology.py
frontend/: README.md  nginx.conf  package.json  vite.config.js
orchestration/: __init__.py  calibration_flow.py  dag_validate.py  executor.py  pipeline_params.py  pipeline_tasks.py
protocols/: __init__.py  bitflip_code.py  commitment.py  entanglement.py  noise.py  qkd.py  quantum_illumination.py  quantum_radar.py  tamper_evident.py  teleportation.py
pulse/: __main__.py  compile_cli.py  compiler.py  zurich_export.py
scripts/: generate-requirements-docker.sh
src/: __init__.py
state/: __init__.py  state.py
storage/: __init__.py  artifacts_mlflow.py  db.py
tests/: conftest.py  test_app.py  test_asic.py  test_calibration.py  test_cv_quantum_radar.py  test_dashboard.py  test_engineering_demos.py  test_engineering_inverse_net.py  test_engineering_protocol_ibm.py  test_engineering_routing.py  test_heac_drc_lvs.py  test_hil_ci.py  test_protocols_commitment.py  test_protocols_qkd.py  test_protocols_quantum_illumination.py  test_protocols_tamper_evident.py  test_protocols_teleportation.py  test_pulse.py  test_qasm_pipeline_ci.py  test_state.py  test_viz.py
(+278 files in other folders)
