[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qasic-digital-twin"
version = "0.1.0"
description = "QASIC Digital Twin Platform for quantum ASIC design validation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "networkx>=2.6.0",
    "tqdm>=4.62.0",
    "rich>=10.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "pre-commit>=2.17.0",
]
simulation = [
    "qutip>=4.7.0",
    "meep>=1.25.0",
    "fenics>=2019.1.0",
    "gmsh>=4.8.0",
    "pyvista>=0.33.0",
]

[project.scripts]
qasic-create = "digital_twin.cli.main:create_design"
qasic-validate = "digital_twin.cli.main:validate_design"
qasic-batch = "digital_twin.cli.main:batch_validate"
qasic-compare = "digital_twin.cli.main:compare_designs"
qasic-package = "digital_twin.cli.main:package_design"

[project.urls]
Homepage = "https://github.com/qasic-engineering-as-code"
Repository = "https://github.com/qasic-engineering-as-code/digital-twin"
Issues = "https://github.com/qasic-engineering-as-code/digital-twin/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["digital_twin*"]

[tool.setuptools.package-data]
digital_twin = ["*.json", "*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "qutip.*",
    "meep.*",
    "fenics.*",
    "gmsh.*",
    "pyvista.*",
]
ignore_missing_imports = true